# src/Modules/Inventory/DTOs/AdjustInventoryLocationDTO.php
@@ -1,0 +1,12 @@
+<?php
+
+namespace App\Modules\Inventory\DTOs;
+
+final class AdjustInventoryLocationDTO
+{
+    public function __construct(
+        public readonly int $quantity,
+        public readonly ?string $compartmentId
+    ) {
+    }
+}
